--- a/PayCenter.Web/Views/Shared/_Layout.cshtml
+++ b/PayCenter.Web/Views/Shared/_Layout.cshtml
@@ -1,45 +1,163 @@
-﻿<!DOCTYPE html>
+﻿
+@using PayCenter.EntidadesNegocio;
+@{
+    Usuario oUsuario = new Usuario();
+    oUsuario = (Usuario)Session["Datos"];
+}
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="http://iiap.org.pe/favicon.ico" type="image/x-icon">
+    <title>@ViewBag.Title | Mapa de Publicaciones IIAP</title>
+    <!-- Bootstrap Core CSS -->
+    @*<link href="~/Content/css/bootstrap.css" rel="stylesheet">*@
+    <link href="http://iiap.org.pe/visor/css/bootstrap.own.min.css" rel="stylesheet">
 
+    <!-- Custom CSS -->
+    <link href="~/Content/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/Content/font-awesome-4.7.0/css/font-awesome.css" />
+
+    <!-- OpenLayer CSS-->
+    <link rel="stylesheet" href="~/Content/css/ol.css" type="text/css" />
+    <link rel="stylesheet" href="~/Content/css/ol3-layerswitcher.css" type="text/css" />
+    <link rel="stylesheet" href="~/Content/css/ol3-popup.css" type="text/css" />
+    <link rel="stylesheet" href="~/Content/css/ol3gm.css" type="text/css" />
+
+    <!--SMOKE VALIDATION CSS-->
+    @*<link rel="stylesheet" href="~/Content/css/smoke.css" type="text/css" />*@
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <!--js archivos-->
+    <!-- jQuery -->
+    @*<script src="~/Content/js/jquery.js"></script>*@
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+
+    <!--Personal Utils-->
+    <script src="~/Content/js/utils.min.js"></script>
+    <script src="~/Content/js/conexion-1.0.0.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    @*<script src="~/Content/js/bootstrap.min.js"></script>*@
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--OpenLayer JS-->
+    @*<script src="~/Content/js/ol.js"></script>*@
+    <script src="https://openlayers.org/en/v3.7.0/build/ol.js"></script>
+    <script src="~/Content/js/ol3-layerswitcher.min.js"></script>
+    <script src="~/Content/js/ol3-popup.min.js"></script>
+
+    <!--SMOKE VALIDATION JS-->
+    @*<script src="~/Content/js/smoke.min.js"></script>*@
+
+    <!--fin js archivos-->
+
+    <script type="text/javascript">
+        //pasamos el modelo a javascript
+        var Model = @Html.Raw(Json.Encode(@Model));
+    </script>
+
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+
+                <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+                    <img style="max-width: 100px; height: 40px; margin-top: -7px;"
+                         src="~/Content/img/logo.png">
+                </a>
+
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class="navbar-brand" href="@Url.Action("Index", "Inicio")">Mapa Global de Publicaciones (Amazonía)</a>
             </div>
-            <div class="navbar-collapse collapse">
+
+
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>
+                        <a href="@Url.Action("Acerca", "Inicio")">Acerca del proyecto</a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Contacto", "Inicio")">Contacto</a>
+                    </li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+
+
+                <ul class="nav navbar-nav navbar-right">
+
+
+                    @if (oUsuario == null)
+                    {
+                        <li class="">
+                            <a href="@Url.Action("Login", "Login")">Iniciar Sesión</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@oUsuario.cUsuario <span class="caret"></span></a>
+
+                            @*<ul class="dropdown-menu">
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="@Url.Action("Registrar", "Publicacion")">Registrar publicación</a></li>
+                                    <li><a href="@Url.Action("Listar", "Publicacion")">Mantener publicaciones</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="@Url.Action("CerrarSession", "Login")">Salir</a></li>
+                                </ul>*@
+
+                            <ul class="dropdown-menu dropdown-user">
+                                <li>
+                                    <a href="@Url.Action("Index", "Gestion")"><i class="fa fa-home" aria-hidden="true"></i> Gestionar Publicaciones</a>
+                                </li>
+                                <li role="separator" class="divider"></li>
+                                <li>
+                                    <a href="@Url.Action("CerrarSession", "Login")"><i class="fa fa-sign-out" aria-hidden="true"></i> Cerrar Sesión</a>
+                                </li>
+                            </ul>
+
+                        </li>
+                    }
+                </ul>
+
+
             </div>
+            <!-- /.navbar-collapse -->
         </div>
-    </div>
-    <div class="container body-content">
+        <!-- /.container -->
+    </nav>
+    <!-- Page Content -->
+    <div class="container card">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
-        </footer>
+        <hr>
+        <!-- Footer -->
+
+
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <div class="container">
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="right">Instituto de Investigaciones de la Amazonía Peruana</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
+    </div>
+    <!-- /.container -->
 </body>
 </html>
+
+<script>
+
+</script>
