--- a/PayCenter.Web/Views/Shared/_LayoutGestion.cshtml
+++ b/PayCenter.Web/Views/Shared/_LayoutGestion.cshtml
@@ -25,15 +25,8 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/css/mainGestion.css")">
     <link rel="stylesheet" href="@Url.Content("~/Content/font-awesome-4.7.0/css/font-awesome.css")" />
 
-    <!-- OpenLayer CSS-->
-    <link rel="stylesheet" href="~/Content/css/ol.css" type="text/css" />    @*<link href="@Url.Content("~/Content/extend/datepicker/css/bootstrap-datepicker3.css")" rel="stylesheet" />*@
-    @*<link href="@Url.Content("~/Content/extend/datepickerTime/css/bootstrap-datetimepicker-4.15.35.css")" rel="stylesheet" />*@
 </head>
 <body class="metro">
-    <!--OpenLayer JS-->
-    @*<script src="~/Content/js/ol.js"></script>*@
-    <script src="https://openlayers.org/en/v3.7.0/build/ol.js"></script>
-
     <div id="wrapper">
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -71,7 +64,7 @@
 
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
-                    @*  @Html.Action("ObtenerMenu", "Menu")*@
+                      @Html.Action("ObtenerMenu", "Menu")
                     @*<ul class="nav" id="side-menu">
                             <li>
                                 <a href="#Mis-Publicaciones" data-url="@Url.Action("MisPublicaciones", "Publicacion")"><i class="fa fa-map-marker m-l-3 m-r-3" aria-hidden="true"></i> Mis publicaciones</a>
@@ -119,11 +112,11 @@
     <script src="@Url.Content("~/Content/js/conexion-1.0.0.js")"></script>
     <script src="@Url.Content("~/Content/js/base/ventana-1.0.0.js")"></script>
     <script src="@Url.Content("~/Content/js/base/tabla-1.0.0.js")"></script>
-    <script src="@Url.Content("~/Content/js/base/buscarPersona-1.0.0.js")"></script>
+    @*<script src="@Url.Content("~/Content/js/base/buscarPersona-1.0.0.js")"></script>*@
     @*<script src="@Url.Content("~/Content/js/base/buscarProducto-1.0.0.js")"></script>*@
     @*<script src="@Url.Content("~/Content/js/base/buscarProveedor-1.0.0.js")"></script>*@
     <script src="@Url.Content("~/Content/js/base/mensaje-1.0.0.js")"></script>
-    <script src="@Url.Content("~/Content/js/smoke.min.js")"></script>
+    @*<script src="@Url.Content("~/Content/js/smoke.min.js")"></script>*@
     @*<script src="@Url.Content("~/Content/extend/highcharts/highcharts.js")"></script>*@
     @*<script src="@Url.Content("~/Content/extend/timer/jquery.timers.js")"></script>*@
 
